# primersim

./: .gitignore  Makefile  README.md  pyproject.toml  setup.py
docs/: 3p_binding.md  address_suggestions.md  memory_usage.md  performance.md  precision.md  solver.md  suggestions.md
include/: eq.hpp  thal.h  thal_default_params.h
primersim/: __init__.py
scripts/: addresses_to_primers.py  compare_csv.py  diagnose_outliers.py  find_outliers.py  import_primers.py  plot_average_ratio.py  plot_std_ratio.py  plot_worst_address.py  run_sweep_lsf.sh
src/: address_eval.cpp  eq.cpp  pybind.cpp  sim.cpp  test_eq.cpp  thal.cpp
tests/: test_primersim.py
