[build-system]
requires = ["setuptools>=61", "pybind11>=2.12"]
build-backend = "setuptools.build_meta"

[project]
name = "primersim"
version = "0.1.0"
description = "Python interface to the C++ PCR equilibrium simulator"
requires-python = ">=3.10"
license = { text = "Proprietary" }

[tool.setuptools]
packages = ["primersim"]
